# teams-but-actually-good

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package copy.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: draft-release.yml  lint-pr.yml  release.yml
extension/: background.js  manifest.chrome.json  manifest.firefox.json  manifest.json  manifest.safari.json  popup.html  popup.js
safari-extension/Teams But Actually Good/Shared (App)/: ViewController.swift
safari-extension/Teams But Actually Good/Shared (Extension)/: SafariWebExtensionHandler.swift
safari-extension/Teams But Actually Good/Teams But Actually Good.xcodeproj/: project.pbxproj
scripts/: dev.ts  generate-all.ts  generate-plugins.ts  release.sh
src/: easy-logger.ts  injection.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: devs.ts
src/interface/: index.ts
src/styles/: notifications.css
src/teams-plugin/betterAppBar/: index.tsx
src/themes/: example.css  test1.css
src/types/: css.d.ts  jsx.d.ts  modules.ts  svg.d.ts  trusted-types.d.ts  types.ts
src/utils/: easy-logger.ts  icon.ts  notifications.ts  plugin-loader.ts  plugin-registry.ts  storage.ts  styles.ts  teams-hostnames.js  teams-hostnames.test.mjs  teams-hostnames.ts  theme-loader.ts  theme-registry.ts  themes.ts
test/: pluginLoader.ts
(+54 files in other folders)
